# CoreRTOS

./: CMakeLists.txt  CoreRTOS.cmake  Makefile
include/: CoreRTOS.h  rp2040.h  scheduler.h
src/: cs.S  main.c  rp2040.c  scheduler.c
